--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-fastapi
-uvicorn
-python-multipart
-pillow
-opencv-python-headless
-numpy
-pycryptodome
-exifread
-python-magic
-pymupdf
-pdfminer.six
+fastapi==0.110.0
+uvicorn==0.29.0
+python-multipart==0.0.9
+pillow==10.2.0
+opencv-python-headless==4.8.1.78
+numpy==1.26.4
+pycryptodome==3.20.0
+exifread==3.0.0
+python-magic-bin==0.4.14
+pymupdf==1.23.8
+pdfminer.six==20231228
